mule-user-guide/v/3.5/ajax-connector.adoc
= Ajax Connector

*Ajax* is an acronym for *Asynchronous JavaScript and XML*, a cluster of related technologies that facilitate the creation of asynchronous Web applications. The *Ajax Connector*, which can be configured as an inbound or outbound endpoint, creates a transport channel to send messages asynchronously to and from an Ajax server, which communicates with external Web resources.

Typically, the Ajax endpoint connects your Mule flow to an external web page, which can exchange information with a user somewhere in the Cloud. A JavaScript client attached to the webpage listens for user input, which it sends through the Ajax endpoint to your flow for processing.

Typically, the channel that the Ajax server and the Ajax endpoint use for communication is configured though a Global Element template known as a *Connector Configuration*.

== Configuration

Configuration of an Ajax endpoint typically requires two steps:

. Decide where you want to place the Ajax endpoint within your Mule flow, then drag it from the Palette to the appropriate place in the sequence of building blocks that make up your Mule flow. +
.. If you place the Ajax endpoint at the beginning of the flow, it will act as an inbound endpoint (i.e., your message source).
.. If you place the Ajax building block in the middle or at the end of the flow, it will serve as an outbound endpoint.
. Configure the Ajax endpoint (and the *Connector Configuration* it depends on to define its transport channel) by providing values for the fields on the various tabs on the Ajax endpoint properties editor, which you open by double-clicking the Ajax icon on the Message Flow canvas.

Configure the tabs as shown.

=== General Tab

image:Studio-ajax-gen.png[Studio-ajax-gen]

[%header,cols="2*"]
|===
|Property |Description
|*Display Name* |Defaults to the generic endpoint name, which in this case is Ajax. Change the display name, which must be alpha-numeric, to reflect the endpoint's specific role, such as `Interactive Opinion Poll Connection`.
|*Channel* |Specify the channel over which your Ajax endpoint communicates with the client web page. For example, `/services/echo`.
|*Connector Configuration* |Use the dropdown list to select a previously configured connector configuration for this endpoint. If you have not created a connector configuration for this type of endpoint, you can do so from this window by clicking *Add*. Click *Edit* to modify a previously created global element.
|===

=== Advanced Tab

image:Studio-ajax-outbound-adv.png[Studio-ajax-outbound-adv]

[%header,cols="2*"]
|===
|Property |Description
|*Address* |Enter the address for this endpoint, such as `http://localhost:8081/file`.
|*Response timeout* |Specify how long the endpoint must wait for a response (in ms). The default is *1000* ms.
|*Encoding* |Choose from a drop-down list the character set used for message data. (such as UTF-8).
|*Disable Transport Transformer* |Check this box if you do _not_ want to use the endpoint’s default response transport.
|*MIME Type* |Select from the dropdown list one of the formats this endpoint supports.
|*Cache Messages* |_(Applies to outbound Ajax endpoint only)_. Check this box to enable the dispatcher to cache messages. Messages will only be cached if no clients are subscribed to the channel.
|*Message Cache Size* |_(Applies to outbound Ajax endpoint only)_. Enable Cache Messages, then select the cache size. Default cache size is 1024.
|*Connector Endpoint* |Use the drop-down list to select a previously configured global endpoint template, if any exist. If you have not created a global element for this type of endpoint, you do so by clicking *Add* and completing the fields on the pane that appears. Click *Edit* to modify a previously created global element.
|*Enable default events tracking* |Enable default link:/mule-user-guide/v/3.6/business-events[business event] tracking for this endpoint.
|===

=== Transformers Tab

image:Studio-ajax-trans.png[Studio-ajax-trans]

[%header,cols="2*"]
|===
|Field |Description
|*Request Transformer References* |Enter a list of synchronous transformers that will be applied to the request before it is sent to the transport.
|===

== Reference

For details on setting the properties for an Ajax endpoint using an XML editor, see the link:/mule-user-guide/v/3.6/ajax-transport-reference[Ajax Transport Reference] discussion in the Mule ESB User Guide.
 
